--- a/Parte 2/css/ejercicio4.css
+++ b/Parte 2/css/ejercicio4.css
@@ -2,3 +2,58 @@
     margin: 0;
     padding: 0;
 }
+.contenedor{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  height: 50%;
+  padding: 20px;  
+  text-align: center;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  
+}
+button{
+    margin: 20px 10px;
+    font-size: 22px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background: white;
+    padding: 4px;
+    outline: none;
+}
+button:hover{
+    cursor: pointer;
+    background-color: black;
+    border: 1px solid whitesmoke;
+    color: white;
+
+}
+form{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+input[type=text] {
+    width: 20%;
+    border: none;
+    border-bottom: 2px solid black;
+    font-size: 18px;
+    margin-right: 30px;
+    outline: none;
+}
+#resultado{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    font-size: 30px;
+}
+#intentos{
+    margin: 10px 0 10px 0;
+    font-size: 30px;
+}
+#historial{
+    font-size: 30px;
+    
+    margin: 10px 0 10px 0;
+}
