--- a/Parte 2/css/ejercicio3.css
+++ b/Parte 2/css/ejercicio3.css
@@ -1,6 +1,26 @@
 * {
     box-sizing: border-box;
   }
+  .nav{
+    text-align: right;
+    margin-top: 15px;
+    margin-right: 10px;
+    height: 50px;
+}
+.nav button{
+  font-size: 15px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background: white;
+  padding: 4px;
+  outline: none;
+}
+.nav button:hover{
+  cursor: pointer;
+  background-color: black;
+  border: 1px solid whitesmoke;
+  color: white;
+}
 .triqui {    
     position: absolute;
     left: 50%;
@@ -35,7 +55,7 @@
     border-right: 1.5px solid black;
   }
 
-  button{
+  button#start{
     position: absolute;
     left: 50%;
     top: 50%;
